--- a/src/app/components/detail-product/detail-product.component.css
+++ b/src/app/components/detail-product/detail-product.component.css
@@ -31,7 +31,7 @@
   object-fit: cover; }
 
 .thumbnail-item.active {
-  border: 2px solid white; }
+  border: 4px solid green; }
 
 .product-details {
   color: white;
