--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- <app-home></app-home>-->
- <app-detail-product></app-detail-product>
+<!-- <app-detail-product></app-detail-product>-->
 <!-- <app-order></app-order>-->
-<!-- <app-order-confirm></app-order-confirm>-->
+<!-- <app-order-details></app-order-details>-->
 <!--<app-register></app-register>-->
 <!--<app-login></app-login>-->
+<router-outlet></router-outlet>
