--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -20,4 +20,22 @@ header {
   background-color: #7f44ff !important;
   color: white !important; }
 
+/* Add this CSS to your project's stylesheet */
+.popover-list {
+  padding: 10px; }
+
+.popover-body {
+  padding: 0px; }
+
+.popover-item {
+  display: block;
+  margin-bottom: 5px;
+  text-decoration: none;
+  color: #333; }
+
+.popover-item:hover {
+  background-color: #f0f0f0;
+  color: blue;
+  /* Change text color to red on hover */ }
+
 /*# sourceMappingURL=header.component.css.map */
