--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .intro-section {
   text-align: center;
   color: white;
@@ -11,9 +10,7 @@
   margin-bottom: 20px; }
 
 .product-category {
-  width: 200px;
-  margin-right: 10px;
-  /* Thêm khoảng cách bên phải */ }
+  width: 200px; }
 
 .search-input {
   width: 300px;
